...
              ],
            ),
          ),
          child: Stack(
            children: <Widget>[
              TabBarView(
                key: Key('tab_view_apresentacao'),
                controller: _tabController,
                physics: widget.trocaTemplate ? NeverScrollableScrollPhysics() : AlwaysScrollableScrollPhysics(),
                children: <Widget>[
                  _primeiraPagina(config, tema),
                  _segundaPagina(tema),
                  _terceiraPagina(tema),
...
            ),
          ),
          const SizedBox(
            height: 20,
          ),
          RawMaterialButton(
            key: Key('opcao_reativa'),
            onPressed: () {
              Configuracao config = configuracaoBloc.currentConfig;
              configuracaoBloc.update(
                config.copyWith(template: 'reativo'),
              );
              NavigatorUtil.navigate(
...
