...

class PageInstitucional extends StatelessWidget {
  @override
  Widget build(BuildContext context) {
    Tema tema = ConfiguracaoApp.of(context).tema;
    return PageTemplate(
      key: Key("page_institucional"),
      title: const IntlText("institucional.institucional"),
      body: ListView(
        children: <Widget>[
          Container(
            width: double.infinity,
            height: 180,
...
