...
                ),
              );
            })).followedBy([
              BottomNavigationBarItem(
                backgroundColor: Colors.white,
                icon: Badge(
                  key: Key("opcao_menu"),
                  showBadge:
                      widget.menus.any((menu) => (menu.notificacoes ?? 0) > 0),
                  badgeColor: tema.badgeBackground,
                  child: SizedBox(
                    width: 30,
                    height: 25,
...
